--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 <script>
     // Initialize Firebase
     var config = {
-        apiKey: "--BURAYA KENDİ UYGULAMANIZIN BİLGİLERİNİ GİRİNİZ--",
-        authDomain: "--BURAYA KENDİ UYGULAMANIZIN BİLGİLERİNİ GİRİNİZ--",
-        databaseURL: "--BURAYA KENDİ UYGULAMANIZIN BİLGİLERİNİ GİRİNİZ--",
-        projectId: "--BURAYA KENDİ UYGULAMANIZIN BİLGİLERİNİ GİRİNİZ--",
-        storageBucket: "--BURAYA KENDİ UYGULAMANIZIN BİLGİLERİNİ GİRİNİZ--",
-        messagingSenderId: "--BURAYA KENDİ UYGULAMANIZIN BİLGİLERİNİ GİRİNİZ--"
+        apiKey: "AIzaSyCtSf4MPyJktuIX774VogmvsORjMXfClvc",
+        authDomain: "sohbet-uygulamasi-1dec6.firebaseapp.com",
+        databaseURL: "https://sohbet-uygulamasi-1dec6.firebaseio.com",
+        projectId: "sohbet-uygulamasi-1dec6",
+        storageBucket: "sohbet-uygulamasi-1dec6.appspot.com",
+        messagingSenderId: "138065161828"
     };
     firebase.initializeApp(config);
 </script>
